Little images wrapper lots of image Y overflow fix

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -190,6 +190,7 @@
 .LittleImagesWrapper {
   backdrop-filter: contrast();
   height: 640px;
+  overflow: auto;
 }
 
 .LittleImages img {
